cups (1.5.0-17) UNRELEASED; urgency=low

  [ Martin-Éric Racine ]
  * Removed myself from Uploaders. 

  [ Martin Pitt ]
  * debian/control: Drop now obsolete poppler-dev build dependency, thanks
    Pino Toscano. (Closes: #658237)
  * Drop do-not-emit-ps-level-3-with-poppler.patch, filter is now built by
    the cups-filters package.

 -- Martin-Éric Racine <martin-eric.racine@iki.fi>  Sat, 28 Jan 2012 17:00:40 +0200

cups (1.5.0-16) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/filters/, debian/local/backends/, debian/local/filters/,
    debian/local/cpdftocps.convs, debian/local/oopstops.convs,
    debian/local/oopstops.types, debian/local/postscript.ppd,
    debian/local/pstopdf.convs, debian/local/pstopdf.types,
    debian/local/text.convs, debian/local/textonly.ppd, debian/cups.install,
    debian/cups-common.links, debian/cups.links, debian/rules: Removed all
    add-on filters and backends which now get hosted by OpenPrinting in the
    OpenPrinting CUPS filters package (Debian package "cups-filters"). Also
    removed some obsolete or redundant filters/backends/PPDs: mailto, oopstops,
    dvipipetops, samba-to-ps, postscript.ppd, pdf.ppd.
  * debian/rules: Removed filters, backends, and MIME conversion rules from
    upstream CUPS which have now moved to the cups-filters package.
  * debian/rules: Do not apply the PDF filters add-on package any more as
    the filters are supplied by cups-filters now. Call aclocal and
    autoconf explicitly, as the add-on package does not call them for us
    any more.
  * debian/control: Let the cups binary package depend on cups-filters, so
    that the moved filters and backends stay available.
  * debian/control: Do not build-depend on liblcms1-dev any more. We do not
    have the PDF filters in this package any more.
  * debian/control: Do not depend on ttf-freefont any more.
  * debian/cups.lintian-overrides: Removed entries for serial and parallel
    backends.